Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5230

explicitly release message is not marked as redelivered on subsequent delivery

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.24
    • 0.25
    • C++ Client
    • None

    Description

      This is over 0-10. The set-redelivered flag is not set for messages that are fetched then explicitly released by the application. It probably should be.

      (Unaccepted messages automatically released on end of session are marked redelivered).

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: