QPID-5230: request that explicitly released messages be marked as redelivered on subsequent delivery attempts

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1532305 13f79535-47bb-0310-9956-ffa450edef68